Add lisp study.